--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
 
-:root{
+:root {
     --text-color: #222;
-    --logo-color: rgb(128,150,178);
+    --logo-color: rgb(128, 150, 178);
 }
 
 html, body {
@@ -27,6 +27,15 @@ html, body {
 .navbar-link {
     font-size: 1.1rem;
     font-weight: 500;
+}
+
+a {
+    color: var(--text-color);
+}
+
+a:hover {
+    color: var(--text-color);
+    text-decoration: none;
 }
 
 .nav-link:hover,
@@ -66,33 +75,15 @@ html, body {
     border-radius: 0;
 }
 
-.car1   {
-    width:100%; /*container-width*/
-    overflow:hidden; /*hide bounds of image */
-    margin:0;
-    display:block;
+.car1 {
+    width: 100%; /*container-width*/
+    overflow: hidden; /*hide bounds of image */
+    margin: 0;
+    display: block;
     margin-top: -10%;
     margin-bottom: -10%;
 }
 
-
-.fa-html5 {
-    font-size: 5rem;
-    margin: 1rem;
-    color: #e54d26
-}
-
-.fa-bootstrap {
-    font-size: 5rem;
-    margin: 1rem;
-    color: #563d71;
-}
-
-.fa-css3-alt {
-    font-size: 5rem;
-    margin: 1rem;
-    color: #2164af;
-}
 
 .social a {
     font-size: 4rem;
@@ -123,6 +114,7 @@ footer {
 img {
     max-width: 100%;
 }
+
 img.portfolio-img {
     -moz-transform: scale(1);
     -webkit-transform: scale(1);
@@ -130,23 +122,116 @@ img.portfolio-img {
     transition: 0.2s;
 }
 
+/*
 img.portfolio-img:hover {
     -moz-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
     transition: 0.4s;
+}*/
+
+.parent {
+    display: grid;
 }
 
-#languageDropdown{
-    align : left;
+.section-text {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding: 2rem;
+}
+
+#prodImg1 {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    padding: 2rem;
+}
+
+#prodImg2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding: 2rem;
+}
+
+#prodImg3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    padding: 2rem;
+}
+
+#prodImg4 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    padding: 2rem;
+}
+
+#prodImg5 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    padding: 2rem;
+}
+
+#prodImg6 {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    padding: 2rem;
+}
+
+.navCard {
+}
+
+.navCard img {
+    -moz-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    transition: 0.4s;
+}
+
+.navCard:hover img {
+    -moz-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.navCard p {
+    -moz-transform: scale(0);
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    transition: 0.5s;
+}
+
+.navCard:hover p {
+    -moz-transform: scale(1) translateY(10px);
+    -webkit-transform: scale(1) translateY(10px);
+    transform: scale(1) translateY(10px);
+    transition: 0.3s;
+}
+
+.navCard h3 {
+    transition: 0.3s;
+}
+
+.navCard:hover h3 {
+    -moz-transform: translateY(10px);
+    -webkit-transform: translateY(10px);
+    transform: translateY(10px);
+    transition: 0.3s;
+}
+
+.more-link {
+
+}
+
+#languageDropdown {
+    align: left;
 }
 
 #conficeLogo {
     height: 12rem;
-    width:300px; /*container-width*/
-    overflow:hidden; /*hide bounds of image */
-    margin:0;
-    display:block;
+    width: 300px; /*container-width*/
+    overflow: hidden; /*hide bounds of image */
+    margin: 0;
+    display: block;
     margin-top: -23%;
     margin-bottom: -23%;
 }
@@ -155,11 +240,12 @@ img.portfolio-img:hover {
     -moz-transform: scale(0.1);
     -webkit-transform: scale(0.1);
     transform: scale(0.1);
-    overflow:hidden; /*hide bounds of image */
-    margin:0;
-    display:block;
+    overflow: hidden; /*hide bounds of image */
+    margin: 0;
+    display: block;
     margin-right: 90%;
 }
+
 /*---Media Queries --*/
 
 @media (max-width: 991px) {
@@ -179,6 +265,7 @@ img.portfolio-img:hover {
         font-size: 1rem;
         padding: .6rem .9rem;
     }
+
     h1.display-5 {
         font-size: 2.2rem;
     }
@@ -212,6 +299,7 @@ img.portfolio-img:hover {
     h1.display-5 {
         font-size: 1.8rem;
     }
+
     .social a {
         font-size: 2.5rem;
         padding: 1.2rem;
@@ -313,12 +401,96 @@ figure {
     will-change: transform;
 }
 
+.files input {
+    outline: 2px dashed #92b0b3;
+    outline-offset: -10px;
+    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    padding: 120px 0px 85px 35%;
+    text-align: center !important;
+    margin: 0;
+    width: 100% !important;
+}
+
+.files input:focus {
+    outline: 2px dashed #92b0b3;
+    outline-offset: -10px;
+    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    border: 1px solid #92b0b3;
+}
+
+.files {
+    position: relative
+}
+
+.files:after {
+    pointer-events: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 50px;
+    right: 0;
+    height: 56px;
+    content: "";
+    background-image: url(https://image.flaticon.com/icons/png/128/109/109612.png);
+    display: block;
+    margin: 0 auto;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+
+.color input {
+    background-color: #f1f1f1;
+}
+
+a .cards {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+.form-error {
+    font-size: 1rem;
+    color: red;
+    display: none;
+}
+
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
     padding: 1rem;
 }
 
 
+#constrImg1 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding:2rem;
+}
 
+#constrImg2 {
+    grid-row: 2/3;
+    padding:2rem;
+    grid-column: 1/2;
+}
 
+#constrImg3 {
+    grid-row: 2/3;
+    padding:2rem;
+    grid-column: 2/3;
+}
 
+#devImg1 {
+    grid-column: 2/3;
+    grid-row: 1/4;
+    padding: 2rem;
+}
+#devImg2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding: 2rem;
+}
+#devImg3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    padding: 2rem;
+}
