--- a/style.css
+++ b/style.css
@@ -494,3 +494,15 @@ a .cards {
     grid-row: 3/4;
     padding: 2rem;
 }
+
+#aboutImg {
+    height: 24rem;
+    width: 500px; /*container-width*/
+    overflow: hidden; /*hide bounds of image */
+    margin: 0;
+    margin-top: -18%;
+    margin-bottom: -23%;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding: 2rem;
+}
